--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ button:hover {
                     <div class="loading-bar">
                         <div class="loading-bar-fill"></div>
                     </div>
-                    <div class="loading-bar-text">Subiendo Nota al Sistema 98% ...</div>
+                    <div class="loading-bar-text">Finalizando Modificación</div>
                 </div>
                 <div class="chatbot-container">
                     <div class="ai-assistant">
